Update index.html by salmaan1234
Add contents part 1

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 							</ul>
 							<h2 class="code-line" data-line-start=40 data-line-end=42 ><a id="A_better_halving_40"></a>A better halving</h2>
 							<ul>
-							<li class="has-line-data" data-line-start="42" data-line-end="46">Halving is everything:
+							<li class="has-line-data" data-line-start="42" data-line-end="46">Halving is everything about limiting the total supply:
 							<ul>
 							<li class="has-line-data" data-line-start="43" data-line-end="44">Bitcoin is valuable because its total supply has been strictly limited, unlike traditional currencies.</li>
 							<li class="has-line-data" data-line-start="44" data-line-end="45">This total supply is controlled <em>only</em> by that halving. There is nothing else.</li>
@@ -212,7 +212,7 @@
 							<li class="has-line-data" data-line-start="49" data-line-end="52">Halving schedule:
 							<ul>
 							<li class="has-line-data" data-line-start="50" data-line-end="51">Interval <code>12500000 blocks (5^8*32)</code> which is about 2 years (exactly 1.9818619989852864… years).</li>
-							<li class="has-line-data" data-line-start="51" data-line-end="52">The total number of times halving will occur is <code>33 times</code>, over the span of <code>66 years</code>.</li>
+							<li class="has-line-data" data-line-start="51" data-line-end="52">The total number of times halving will occur is <code>33 times</code>, over the span of approximately <code>66 years</code>.</li>
 							</ul>
 							</li>
 							<li class="has-line-data" data-line-start="52" data-line-end="56">Total supply:
@@ -255,7 +255,7 @@
 							<ul>
 							<li class="has-line-data" data-line-start="85" data-line-end="87">Disk space requirements:
 							<ul>
-							<li class="has-line-data" data-line-start="86" data-line-end="87">Blockchain size growth is around <code>10 MB per 1 day</code> and 3.65 GB per year.</li>
+							<li class="has-line-data" data-line-start="86" data-line-end="87">Blockchain size growth is around <code>10 MB per day</code> and around 4 GB per year.</li>
 							</ul>
 							</li>
 							<li class="has-line-data" data-line-start="87" data-line-end="89">Network rules:
