add: smartpool by kaka

--- a/index.html
+++ b/index.html
@@ -344,9 +344,10 @@
 							<li class="has-line-data" data-line-start="154" data-line-end="155">skypool@(singapore | amsterdam | newyork): <a href="https://sugar.skypool.co">https://sugar.skypool.co</a></li>
 							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@tokyo: <a href="https://nomp.mofumofu.me/">https://nomp.mofumofu.me</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">schoollt@china: <a href="https://pool.schoollt.cn/">https://pool.schoollt.cn/</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">schoollt@china: <a href="https://pool.schoollt.cn/">https://pool.schoollt.cn</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">dxpool@china: <a href="https://www.dxpool.com/">https://www.dxpool.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">anomp@china: <a href="http://anomp.com:8090/">http://anomp.com:8090</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">smartpool@china: <a href="http://139.129.229.26/">http://139.129.229.26</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
