--- a/wallet/index.html
+++ b/wallet/index.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://sugar.wtf/wizardry.min.css">
-		<link rel="stylesheet" href="https://sugar.wtf/entypo/entypo.css">
+		<link rel="stylesheet" href="/cdn/wizardry.min.css">
+		<link rel="stylesheet" href="/cdn/entypo/entypo.css">
 
 		<link rel="icon" type="image/png" href="https://sugarchain.org/logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
