--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 						<a href="#specs" class="scroll">SPECS</a>
 						<a href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">WALLET</a>
 						<a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest" target="_blank">CPUMINER</a>
-						<a href="#contacts" class="scroll">CONTACTS</a>
+						<a href="https://github.com/sugarchain-project/team-contacts/blob/master/README.md" target="_blank">TEAM</a>
+						<a href="#contacts" class="scroll">COMMUNITY</a>
 					</div>
 				</div>
 			</div>
