--- a/index.html
+++ b/index.html
@@ -338,17 +338,16 @@
 							<ul>
 							<li class="has-line-data" data-line-start="148" data-line-end="149">1pool@tokyo: <a href="https://1pool.sugarchain.org">https://1pool.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="149" data-line-end="150">2pool@tokyo: <a href="https://2pool.sugarchain.org">https://2pool.sugarchain.org</a></li>
-							<li class="has-line-data" data-line-start="150" data-line-end="151"><strike>52hash@china: <a href="http://sugar.52hash.com">http://sugar.52hash.com</a> (closed)</strike></li>
 							<li class="has-line-data" data-line-start="151" data-line-end="152">rplant@(moscow | london | toronto | singapore): <a href="https://pool.rplant.xyz">https://pool.rplant.xyz</a></li>
 							<li class="has-line-data" data-line-start="152" data-line-end="153">happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a></li>
 							<li class="has-line-data" data-line-start="153" data-line-end="154">hashpex@usa: <a href="http://hashpex.com">http://hashpex.com</a></li>
 							<li class="has-line-data" data-line-start="154" data-line-end="155">skypool@(singapore | amsterdam | newyork): <a href="https://sugar.skypool.co">https://sugar.skypool.co</a></li>
 							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@tokyo: <a href="https://nomp.mofumofu.me/">https://nomp.mofumofu.me</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">schoollt@china: <a href="https://pool.schoollt.cn/">https://pool.schoollt.cn</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">dxpool@china: <a href="https://www.dxpool.com/">https://www.dxpool.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">anomp@china: <a href="http://anomp.com:8090/">http://anomp.com:8090</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">smartpool@china: <a href="http://139.129.229.26/">http://139.129.229.26</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">smartpool@taiwan: <a href="http://139.129.229.26/">http://139.129.229.26</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">root-pool@paris: <a href="http://root-pool.com/">http://root-pool.com</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
