--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 							<li class="has-line-data" data-line-start="156" data-line-end="157">loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">dxpool@china: <a href="https://www.dxpool.com/">https://www.dxpool.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">anomp@china: <a href="http://anomp.com:8090/">http://anomp.com:8090</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">smartpool@taiwan: <a href="http://139.129.229.26/">http://139.129.229.26</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">smartpool@china: <a href="http://139.129.229.26/">http://139.129.229.26</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">root-pool@paris: <a href="http://root-pool.com/">http://root-pool.com</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
