--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">1explorer: <a href="https://1explorer.sugarchain.org">https://1explorer.sugarchain.org</a></li>
-							<li class="has-line-data" data-line-start="161" data-line-end="162">vexplorer: <a href="https://sugarchain.org/explorer">https://sugarchain.org/explorer</a></li>
+							<li class="has-line-data" data-line-start="161" data-line-end="162">Vexplorer: <a href="https://sugarchain.org/explorer">https://sugarchain.org/explorer</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=164 data-line-end=166 ><a id="Exchanges_164"></a>Exchanges</h2>
 							<ul>
