--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
 							</ul>
 							<h2 class="code-line" data-line-start=164 data-line-end=166 ><a id="Exchanges_164"></a>Exchanges</h2>
 							<ul>
-							<li class="has-line-data" data-line-start="166" data-line-end="169">EX4ANGE (by DobroFenix &amp; Tesla)
+							<li class="has-line-data" data-line-start="166" data-line-end="169">EX4ANGE
 							<ul>
-							<li class="has-line-data" data-line-start="167" data-line-end="168">SUGAR-DOGE: <a href="https://ex4ange.org/?SUGAR-DOGE">https://ex4ange.org/?SUGAR-DOGE</a></li>
-							<li class="has-line-data" data-line-start="168" data-line-end="169">SUGAR-BTC: <a href="https://ex4ange.org/?SUGAR-BTC">https://ex4ange.org/?SUGAR-BTC</a></li>
+							<li class="has-line-data" data-line-start="167" data-line-end="169">SUGAR-BTC: <a href="https://ex4ange.org/?SUGAR-BTC">https://ex4ange.org/?SUGAR-BTC</a></li>
+							<li class="has-line-data" data-line-start="168" data-line-end="168">SUGAR-DOGE: <a href="https://ex4ange.org/?SUGAR-DOGE">https://ex4ange.org/?SUGAR-DOGE</a></li>
 							</ul>
 							<li class="has-line-data" data-line-start="169" data-line-end="170">ALTMARKETS
 							<ul>
