add: Rocket.Chat

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
 							<li class="has-line-data" data-line-start="176" data-line-end="177">Telegram: <a href="https://t.me/sugarchain">https://t.me/sugarchain</a></li>
 							<li class="has-line-data" data-line-start="177" data-line-end="178">Twitter: <a href="https://twitter.com/sugarchain_dev">https://twitter.com/sugarchain_dev</a></li>
 							<li class="has-line-data" data-line-start="177" data-line-end="178">Reddit: <a href="https://www.reddit.com/r/Sugarchain">https://www.reddit.com/r/Sugarchain</a></li>
+							<li class="has-line-data" data-line-start="177" data-line-end="178">Rocket.Chat: <a href="https://chat.sugar.wtf">https://chat.sugar.wtf</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=180 data-line-end=182 ><a id="License_180"></a>License</h2>
 							<p class="has-line-data" data-line-start="182" data-line-end="184">Sugarchain Yumekawa is released under the terms of the MIT license. See <a href="https://github.com/sugarchain-project/sugarchain/blob/master-v0.16.3/COPYING">COPYING</a> for more<br>
@@ -411,6 +412,8 @@
 			<a href="https://twitter.com/sugarchain_dev" target="_blank" rel="nofollow">Twitter</a>
 			| 
 			<a href="https://www.reddit.com/r/Sugarchain" target="_blank" rel="nofollow">Reddit</a>
+			|
+			<a href="https://chat.sugar.wtf" target="_blank" rel="nofollow">Rocket.Chat</a>
 		</footer>
 
 		<script>
