--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 							<li class="has-line-data" data-line-start="46" data-line-end="49">Block reward:
 							<ul>
 							<li class="has-line-data" data-line-start="47" data-line-end="48">The block reward should be to a <em>power of two</em>, so that it halves correctly.</li>
-							<li class="has-line-data" data-line-start="48" data-line-end="49">ie) <code>2^32/1e+8 = 42.94967296 SUGAR</code></li>
+							<li class="has-line-data" data-line-start="48" data-line-end="49">ie) <code>2^32/100000000 = 42.94967296 SUGAR</code></li>
 							</ul>
 							</li>
 							<li class="has-line-data" data-line-start="49" data-line-end="52">Halving schedule:
