--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 							<ul>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet: <a href="https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain">https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet: <a href="https://sugarchain.org/wallet">https://sugarchain.org/wallet</a></li>
-							<li class="has-line-data" data-line-start="161" data-line-end="162">API-addressindex: <a href="https://api.sugarchain.org">https://api.sugarchain.org</a></li>
+							<li class="has-line-data" data-line-start="161" data-line-end="162">API Addressindex: <a href="https://api.sugarchain.org">https://api.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">Node Map: <a href="https://map.okoto.xyz/sugar">https://map.okoto.xyz/sugar</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">Halving Counter: <a href="https://sugarchain-blockhalf.github.io">https://sugarchain-blockhalf.github.io</a></li>
 							</ul>
