add: sky.io exchange

--- a/index.html
+++ b/index.html
@@ -375,6 +375,11 @@
 							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-BTC: <a href="https://www.occe.io/sugar_btc">https://www.occe.io/sugar_btc</a></li>
 							</ul>
 							</li>
+							<li class="has-line-data" data-line-start="169" data-line-end="170">SKY.IO
+							<ul>
+							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-USDT: <a href="https://www.sky.io/exchange/SUGAR_USDT">https://www.sky.io/exchange/SUGAR_USDT</a></li>
+							</ul>
+							</li>
 							</ul>
 							<h2 class="code-line" data-line-start=172 data-line-end=173 ><a id="Community_171"></a>Community</h2>
 							<ul>
