add: android wallet

--- a/index.html
+++ b/index.html
@@ -351,6 +351,8 @@
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="3rd_Party_Wallet_157"></a>3rd Party Wallet</h2>
 							<ul>
+							<li class="has-line-data" data-line-start="159" data-line-end="160">Android Wallet (Google): <a href="coming soon">coming soon</a></li>
+							<li class="has-line-data" data-line-start="159" data-line-end="160">Android Wallet (APK download): <a href="https://github.com/sugarchain-project/android_wallet_sugarchain/releases/latest">https://github.com/sugarchain-project/android_wallet_sugarchain/releases/latest</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (stable): <a href="https://sugarchain.org/wallet">https://sugarchain.org/wallet</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (experimental feature): <a href="https://sugar.wtf/wallet">https://sugar.wtf/wallet</a></li>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet: <a href="https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain">https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain</a></li>
