--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
 							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (stable): <a href="https://sugarchain.org/wallet">https://sugarchain.org/wallet</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (experimental feature): <a href="https://sugar.wtf/wallet">https://sugar.wtf/wallet</a></li>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet: <a href="https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain">https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain</a></li>
+							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet (old): <a href="https://sugarchain.org/SugarWalletGenerator.net/?currency=sugarchain">https://sugarchain.org/SugarWalletGenerator.net/?currency=sugarchain</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=164 data-line-end=166 ><a id="Exchanges_164"></a>Exchange</h2>
 							<ul>
