add: pool.work@china

--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
 							<li class="has-line-data" data-line-start="156" data-line-end="157">customspeed@nl: <a href="http://pool.customspeed.nl">http://pool.customspeed.nl</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">scryptpool@usa: <a href="http://scryptpool.xyz">http://scryptpool.xyz</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">miningmadness@usa: <a href="https://www.miningmadness.com">https://www.miningmadness.com</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">pool.work@china: <a href="http://sugar.pool.work:8000">http://sugar.pool.work:8000</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
