--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
 							<li class="has-line-data" data-line-start="156" data-line-end="157">dxpool@china: <a href="https://www.dxpool.com">https://www.dxpool.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">anomp@china: <a href="http://anomp.com:8090">http://anomp.com:8090</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">lepool@china: <a href="http://www.lepool.com.cn:8080">http://www.lepool.com.cn:8080</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">nosuchpool@cz: <a href="https://nosuchpool.cloud">https://nosuchpool.cloud</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">customspeed@nl: <a href="http://pool.customspeed.nl">http://pool.customspeed.nl</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">nosuchpool@czechia: <a href="https://nosuchpool.cloud">https://nosuchpool.cloud</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">customspeed@netherlands: <a href="http://pool.customspeed.nl">http://pool.customspeed.nl</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">scryptpool@usa: <a href="http://scryptpool.xyz">http://scryptpool.xyz</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">miningmadness@usa: <a href="https://www.miningmadness.com">https://www.miningmadness.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">pool.work@china: <a href="http://sugar.pool.work:8000">http://sugar.pool.work:8000</a></li>
