--- a/index.html
+++ b/index.html
@@ -290,12 +290,12 @@
 							<h2 class="code-line" data-line-start=106 data-line-end=108 ><a id="Wallet_106"></a>Wallet</h2>
 							<ul>
 							<li class="has-line-data" data-line-start="108" data-line-end="109">Win64: <a href="https://github.com/sugarchain-project/sugarchain/releases/latest">https://github.com/sugarchain-project/sugarchain/releases/latest</a></li>
-							<li class="has-line-data" data-line-start="109" data-line-end="110">Win32: comming soon</li>
+							<li class="has-line-data" data-line-start="109" data-line-end="110">Win32: coming soon</li>
 							<li class="has-line-data" data-line-start="110" data-line-end="111">Linux64: <a href="https://github.com/sugarchain-project/sugarchain/releases/latest">https://github.com/sugarchain-project/sugarchain/releases/latest</a></li>
-							<li class="has-line-data" data-line-start="111" data-line-end="112">Linux32: comming soon</li>
+							<li class="has-line-data" data-line-start="111" data-line-end="112">Linux32: coming soon</li>
 							<li class="has-line-data" data-line-start="112" data-line-end="113">OSX: <a href="https://github.com/sugarchain-project/sugarchain/releases/latest">https://github.com/sugarchain-project/sugarchain/releases/latest</a></li>
-							<li class="has-line-data" data-line-start="113" data-line-end="114">ARM64: comming soon</li>
-							<li class="has-line-data" data-line-start="114" data-line-end="115">ARM32: comming soon</li>
+							<li class="has-line-data" data-line-start="113" data-line-end="114">ARM64: coming soon</li>
+							<li class="has-line-data" data-line-start="114" data-line-end="115">ARM32: coming soon</li>
 							<li class="has-line-data" data-line-start="115" data-line-end="116">Source: <a href="https://github.com/sugarchain-project/sugarchain">https://github.com/sugarchain-project/sugarchain</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=118 data-line-end=120 ><a id="Cpuminer_118"></a>Cpuminer</h2>
@@ -319,7 +319,7 @@
 							<ul>
 							<li class="has-line-data" data-line-start="136" data-line-end="137">Windows: <a href="https://forum.sugarchain.org/d/9-solo-mining-on-windows">https://forum.sugarchain.org/d/9-solo-mining-on-windows</a></li>
 							<li class="has-line-data" data-line-start="137" data-line-end="138">Linux: <a href="https://forum.sugarchain.org/d/20-solo-mining-on-linux">https://forum.sugarchain.org/d/20-solo-mining-on-linux</a></li>
-							<li class="has-line-data" data-line-start="138" data-line-end="139">OSX: comming soon</li>
+							<li class="has-line-data" data-line-start="138" data-line-end="139">OSX: coming soon</li>
 							</ul>
 							</li>
 							</ul>
