add: EREX.IO exchange

--- a/index.html
+++ b/index.html
@@ -389,6 +389,13 @@
 							<ul>
 							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-USDT: <a href="https://www.sky.io/exchange/SUGAR_USDT">https://www.sky.io/exchange/SUGAR_USDT</a></li>
 							</ul>
+							<li class="has-line-data" data-line-start="169" data-line-end="170">EREX.IO
+							<ul>
+							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-BTC: <a href="https://erex.io/exchange/SUGAR/BTC">https://erex.io/exchange/SUGAR/BTC</a></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-ETH: <a href="https://erex.io/exchange/SUGAR/ETH">https://erex.io/exchange/SUGAR/ETH</a></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-DOGE: <a href="https://erex.io/exchange/SUGAR/DOGE">https://erex.io/exchange/SUGAR/DOGE</a></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-USDT: <a href="https://erex.io/exchange/SUGAR/USDT">https://erex.io/exchange/SUGAR/USDT</a></li>
+							</ul>
 							</li>
 							</ul>
 							<h2 class="code-line" data-line-start=172 data-line-end=173 ><a id="Community_171"></a>Community</h2>
