Add XequineX and Biflex

--- a/index.html
+++ b/index.html
@@ -398,6 +398,13 @@
 							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-USDT: <a href="https://erex.io/exchange/SUGAR/USDT">https://erex.io/exchange/SUGAR/USDT</a></li>
 							</ul>
 							</li>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">BIFLEX.NET
+							<ul>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://biflex.net/exchange/sugar-btc">https://biflex.net/exchange/sugar-btc</a></li>
+							</ul>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">XEQUINEX.COM
+							<ul>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://www.xequinex.com/exchange.php?market=SUGAR-BTC">https://www.xequinex.com/exchange.php?market=SUGAR-BTC</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=172 data-line-end=173 ><a id="Community_171"></a>Community</h2>
 							<ul>
