--- a/index.html
+++ b/index.html
@@ -406,6 +406,10 @@
 							<ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://www.xequinex.com/exchange.php?market=SUGAR-BTC">https://www.xequinex.com/exchange.php?market=SUGAR-BTC</a></li>
 							</ul>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">KUANGEX.COM
+							<ul>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-USDT: <a href="https://www.kuangex.com/trade/sugar_usdt">https://www.kuangex.com/trade/sugar_usdt</a></li>
+							</ul>
 							<h2 class="code-line" data-line-start=172 data-line-end=173 ><a id="Community_171"></a>Community</h2>
 							<ul>
 							<li class="has-line-data" data-line-start="174" data-line-end="175">Forum: <a href="https://forum.sugarchain.org">https://forum.sugarchain.org</a></li>
