fix: closed pool and exchange

--- a/index.html
+++ b/index.html
@@ -334,20 +334,20 @@
 							<li class="has-line-data" data-line-start="148" data-line-end="149">1pool@tokyo: <a href="https://1pool.sugarchain.org">https://1pool.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="149" data-line-end="150">2pool@tokyo: <a href="https://2pool.sugarchain.org">https://2pool.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="151" data-line-end="152">rplant@(moscow | london | toronto | singapore): <a href="https://pool.rplant.xyz">https://pool.rplant.xyz</a></li>
-							<li class="has-line-data" data-line-start="152" data-line-end="153">happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a></li>
+							<li class="has-line-data" data-line-start="152" data-line-end="153"><del>happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="153" data-line-end="154">hashpex@usa: <a href="http://hashpex.com">http://hashpex.com</a></li>
 							<li class="has-line-data" data-line-start="154" data-line-end="155">skypool@(singapore | amsterdam | newyork): <a href="https://sugar.skypool.co">https://sugar.skypool.co</a></li>
 							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@tokyo: <a href="https://nomp.mofumofu.me">https://nomp.mofumofu.me</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">dxpool@china: <a href="https://www.dxpool.com">https://www.dxpool.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">anomp@china: <a href="http://anomp.com:8090">http://anomp.com:8090</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">lepool@china: <a href="http://www.lepool.com.cn:8080">http://www.lepool.com.cn:8080</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">nosuchpool@czechia: <a href="https://nosuchpool.cloud">https://nosuchpool.cloud</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">customspeed@netherlands: <a href="http://pool.customspeed.nl">http://pool.customspeed.nl</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">scryptpool@usa: <a href="http://scryptpool.xyz">http://scryptpool.xyz</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>scryptpool@usa: <a href="http://scryptpool.xyz">http://scryptpool.xyz</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">miningmadness@usa: <a href="https://www.miningmadness.com">https://www.miningmadness.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">pool.work@china: <a href="http://sugar.pool.work:8000">http://sugar.pool.work:8000</a></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">xpoolx@france: <a href="https://xpoolx.com">https://xpoolx.com</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>xpoolx@france: <a href="https://xpoolx.com">https://xpoolx.com</a> (closed)</del></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
@@ -401,9 +401,9 @@
 							<ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://biflex.net/exchange/sugar-btc">https://biflex.net/exchange/sugar-btc</a></li>
 							</ul>
-							<li class="has-line-data" data-line-start="171" data-line-end="171">XEQUINEX.COM
+							<li class="has-line-data" data-line-start="171" data-line-end="171"><del>XEQUINEX.COM (closed)</del>
 							<ul>
-							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://www.xequinex.com/exchange.php?market=SUGAR-BTC">https://www.xequinex.com/exchange.php?market=SUGAR-BTC</a></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="171"><del>SUGAR-BTC: <a href="https://www.xequinex.com/exchange.php?market=SUGAR-BTC">https://www.xequinex.com/exchange.php?market=SUGAR-BTC</a> (closed)</del></li>
 							</ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">KUANGEX.COM
 							<ul>
