--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
 							<li class="has-line-data" data-line-start="156" data-line-end="157">customspeed@netherlands: <a href="http://pool.customspeed.nl">http://pool.customspeed.nl</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">miningmadness@usa: <a href="https://www.miningmadness.com">https://www.miningmadness.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">pool.work@china: <a href="http://sugar.pool.work:8000">http://sugar.pool.work:8000</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">cpu-pool@russia: <a href="http://cpu-pool.com/">http://cpu-pool.com/</a></li>
 							<li class="has-line-data" data-line-start="152" data-line-end="153"><del>happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>scryptpool@usa: <a href="http://scryptpool.xyz">http://scryptpool.xyz</a> (closed)</del></li>
