web wallet name and order

--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
 							<ul>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Android Wallet (Google): <a href="coming soon">coming soon</a></li>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Android Wallet (APK download): <a href="https://github.com/sugarchain-project/android_wallet_sugarchain/releases/latest">https://github.com/sugarchain-project/android_wallet_sugarchain/releases/latest</a></li>
-							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (stable): <a href="https://sugarchain.org/wallet">https://sugarchain.org/wallet</a></li>
-							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (experimental feature): <a href="https://sugar.wtf/wallet">https://sugar.wtf/wallet</a></li>
+							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet: <a href="https://sugar.wtf/wallet">https://sugar.wtf/wallet</a></li>
+							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (old): <a href="https://sugarchain.org/wallet">https://sugarchain.org/wallet</a></li>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet: <a href="https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain">https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain</a></li>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet (old): <a href="https://sugarchain.org/SugarWalletGenerator.net/?currency=sugarchain">https://sugarchain.org/SugarWalletGenerator.net/?currency=sugarchain</a></li>
 							</ul>
