old -> old stable

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 							<ul>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">iquidus: <a href="https://1explorer.sugarchain.org">https://1explorer.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">addressindex: <a href="https://sugar.wtf">https://sugar.wtf</a></li>
-							<li class="has-line-data" data-line-start="161" data-line-end="162">addressindex (old): <a href="https://sugarchain.org/explorer">https://sugarchain.org/explorer</a></li>
+							<li class="has-line-data" data-line-start="161" data-line-end="162">addressindex (old stable): <a href="https://sugarchain.org/explorer">https://sugarchain.org/explorer</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Service_157"></a>Service</h2>
 							<ul>
@@ -367,9 +367,9 @@
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Android Wallet (Google): <a href="coming soon">coming soon</a></li>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Android Wallet (APK download): <a href="https://github.com/sugarchain-project/android_wallet_sugarchain/releases/latest">https://github.com/sugarchain-project/android_wallet_sugarchain/releases/latest</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet: <a href="https://sugar.wtf/wallet">https://sugar.wtf/wallet</a></li>
-							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (old): <a href="https://sugarchain.org/wallet">https://sugarchain.org/wallet</a></li>
+							<li class="has-line-data" data-line-start="161" data-line-end="162">Web Wallet (old stable): <a href="https://sugarchain.org/wallet">https://sugarchain.org/wallet</a></li>
 							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet: <a href="https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain">https://nao20010128nao.github.io/WalletGenerator.net/?currency=sugarchain</a></li>
-							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet (old): <a href="https://sugarchain.org/SugarWalletGenerator.net/?currency=sugarchain">https://sugarchain.org/SugarWalletGenerator.net/?currency=sugarchain</a></li>
+							<li class="has-line-data" data-line-start="159" data-line-end="160">Paper Wallet (old stable): <a href="https://sugarchain.org/SugarWalletGenerator.net/?currency=sugarchain">https://sugarchain.org/SugarWalletGenerator.net/?currency=sugarchain</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=164 data-line-end=166 ><a id="Exchanges_164"></a>Exchange</h2>
 							<ul>
