--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
 							<li class="has-line-data" data-line-start="159" data-line-end="160">iquidus: <a href="https://1explorer.sugarchain.org">https://1explorer.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">addressindex: <a href="https://sugar.wtf">https://sugar.wtf</a></li>
 							<li class="has-line-data" data-line-start="161" data-line-end="162">addressindex (old stable): <a href="https://sugarchain.org/explorer">https://sugarchain.org/explorer</a></li>
+							<li class="has-line-data" data-line-start="161" data-line-end="162">esplora: <a href="https://sugar.wtf/esplora">https://sugar.wtf/esplora</a></li>
+							<li class="has-line-data" data-line-start="161" data-line-end="162">esplora (old stable): <a href="https://sugarchain.org/esplora">https://sugarchain.org/esplora</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Service_157"></a>Service</h2>
 							<ul>
