--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 							<li class="has-line-data" data-line-start="152" data-line-end="153"><del>happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>scryptpool@usa: <a href="http://scryptpool.xyz">http://scryptpool.xyz</a> (closed)</del></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>xpoolx@france: <a href="https://xpoolx.com">https://xpoolx.com</a> (closed)</del></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">xpoolx@france: <a href="https://xpoolx.com">https://xpoolx.com</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
