--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
 							<ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://biflex.net/exchange/sugar-btc">https://biflex.net/exchange/sugar-btc</a></li>
 							</ul>
-							<li class="has-line-data" data-line-start="171" data-line-end="171"><del>XEQUINEX.COM (closed)</del>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">XEQUINEX.COM (closed)
 							<ul>
-							<li class="has-line-data" data-line-start="171" data-line-end="171"><del>SUGAR-BTC: <a href="https://www.xequinex.com/exchange.php?market=SUGAR-BTC">https://www.xequinex.com/exchange.php?market=SUGAR-BTC</a> (closed)</del></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://www.xequinex.com/exchange.php?market=SUGAR-BTC">https://www.xequinex.com/exchange.php?market=SUGAR-BTC</a></li>
 							</ul>
 							</li>
 							</ul>
