--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
 							<li class="has-line-data" data-line-start="156" data-line-end="157">miningmadness@usa: <a href="https://www.miningmadness.com">https://www.miningmadness.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">pool.work@china: <a href="http://sugar.pool.work:8000">http://sugar.pool.work:8000</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">cpu-pool@russia: <a href="http://cpu-pool.com/">http://cpu-pool.com/</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">xpoolx@france: <a href="https://xpoolx.com">https://xpoolx.com</a></li>
 							<li class="has-line-data" data-line-start="152" data-line-end="153"><del>happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>scryptpool@usa: <a href="http://scryptpool.xyz">http://scryptpool.xyz</a> (closed)</del></li>
-							<li class="has-line-data" data-line-start="156" data-line-end="157">xpoolx@france: <a href="https://xpoolx.com">https://xpoolx.com</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
@@ -409,7 +409,7 @@
 							<ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://biflex.net/exchange/sugar-btc">https://biflex.net/exchange/sugar-btc</a></li>
 							</ul>
-							<li class="has-line-data" data-line-start="171" data-line-end="171">XEQUINEX.COM (closed)
+							<li class="has-line-data" data-line-start="171" data-line-end="171">XEQUINEX.COM
 							<ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://www.xequinex.com/exchange.php?market=SUGAR-BTC">https://www.xequinex.com/exchange.php?market=SUGAR-BTC</a></li>
 							</ul>
