--- a/index.html
+++ b/index.html
@@ -335,7 +335,6 @@
 							<li class="has-line-data" data-line-start="149" data-line-end="150">2pool@tokyo: <a href="https://2pool.sugarchain.org">https://2pool.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="151" data-line-end="152">rplant@(moscow | london | toronto | singapore): <a href="https://pool.rplant.xyz">https://pool.rplant.xyz</a></li>
 							<li class="has-line-data" data-line-start="153" data-line-end="154">hashpex@usa: <a href="http://hashpex.com">http://hashpex.com</a></li>
-							<li class="has-line-data" data-line-start="154" data-line-end="155">skypool@(singapore | amsterdam | newyork): <a href="https://sugar.skypool.co">https://sugar.skypool.co</a></li>
 							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@tokyo: <a href="https://nomp.mofumofu.me">https://nomp.mofumofu.me</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">dxpool@china: <a href="https://www.dxpool.com">https://www.dxpool.com</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">anomp@china: <a href="http://anomp.com:8090">http://anomp.com:8090</a></li>
@@ -349,6 +348,7 @@
 							<li class="has-line-data" data-line-start="152" data-line-end="153"><del>happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a> (closed)</del></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157"><del>scryptpool@usa: <a href="http://scryptpool.xyz">http://scryptpool.xyz</a> (closed)</del></li>
+							<li class="has-line-data" data-line-start="154" data-line-end="155"><del>skypool@(singapore | amsterdam | newyork): <a href="https://sugar.skypool.co">https://sugar.skypool.co</a> (closed)</del></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
