closed: EREX.IO

--- a/index.html
+++ b/index.html
@@ -380,13 +380,6 @@
 							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-BTC: <a href="https://altmarkets.io/trading/sugarbtc">https://altmarkets.io/trading/sugarbtc</a></li>
 							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-DOGE: <a href="https://altmarkets.io/trading/sugardoge">https://altmarkets.io/trading/sugardoge</a></li>
 							</ul>
-							<li class="has-line-data" data-line-start="169" data-line-end="170">EREX.IO
-							<ul>
-							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-BTC: <a href="https://erex.io/exchange/SUGAR/BTC">https://erex.io/exchange/SUGAR/BTC</a></li>
-							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-ETH: <a href="https://erex.io/exchange/SUGAR/ETH">https://erex.io/exchange/SUGAR/ETH</a></li>
-							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-DOGE: <a href="https://erex.io/exchange/SUGAR/DOGE">https://erex.io/exchange/SUGAR/DOGE</a></li>
-							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-USDT: <a href="https://erex.io/exchange/SUGAR/USDT">https://erex.io/exchange/SUGAR/USDT</a></li>
-							</ul>
 							<li class="has-line-data" data-line-start="169" data-line-end="170">SKY.IO
 							<ul>
 							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-USDT: <a href="https://www.sky.io/exchange/SUGAR_USDT">https://www.sky.io/exchange/SUGAR_USDT</a></li>
@@ -412,6 +405,13 @@
 							<li class="has-line-data" data-line-start="171" data-line-end="171">XEQUINEX.COM
 							<ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://www.xequinex.com/exchange.php?market=SUGAR-BTC">https://www.xequinex.com/exchange.php?market=SUGAR-BTC</a></li>
+							</ul>
+							<li class="has-line-data" data-line-start="169" data-line-end="170"><del>EREX.IO (closed)</del>
+							<ul>
+							<li class="has-line-data" data-line-start="170" data-line-end="171"><del>SUGAR-BTC: <a href="https://erex.io/exchange/SUGAR/BTC">https://erex.io/exchange/SUGAR/BTC</a> (closed)</del></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="172"><del>SUGAR-ETH: <a href="https://erex.io/exchange/SUGAR/ETH">https://erex.io/exchange/SUGAR/ETH</a> (closed)</del></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="172"><del>SUGAR-DOGE: <a href="https://erex.io/exchange/SUGAR/DOGE">https://erex.io/exchange/SUGAR/DOGE</a> (closed)</del></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="172"><del>SUGAR-USDT: <a href="https://erex.io/exchange/SUGAR/USDT">https://erex.io/exchange/SUGAR/USDT</a> (closed)</del></li>
 							</ul>
 							</li>
 							</ul>
