add: exchange: GX.COM

--- a/index.html
+++ b/index.html
@@ -388,6 +388,10 @@
 							<ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-USDT: <a href="https://www.kuangex.com/trade/sugar_usdt">https://www.kuangex.com/trade/sugar_usdt</a></li>
 							</ul>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">GX.COM
+							<ul>
+							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-USDT: <a href="https://www.gx.com/trade/SUGAR_USDT">https://www.gx.com/trade/SUGAR_USDT</a></li>
+							</ul>
 							<li class="has-line-data" data-line-start="166" data-line-end="169">EX4ANGE
 							<ul>
 							<li class="has-line-data" data-line-start="167" data-line-end="168">SUGAR-BTC: <a href="https://ex4ange.org/?SUGAR-BTC">https://ex4ange.org/?SUGAR-BTC</a></li>
