Remove Biflex Exchange (exit scam)

--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
 							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-BTC: <a href="https://www.occe.io/sugar_btc">https://www.occe.io/sugar_btc</a></li>
 							</ul>
 							</li>
-							<li class="has-line-data" data-line-start="171" data-line-end="171">BIFLEX.NET
+							<li class="has-line-data" data-line-start="171" data-line-end="171"><del>BIFLEX.NET (closed)</del>
 							<ul>
-							<li class="has-line-data" data-line-start="171" data-line-end="171">SUGAR-BTC: <a href="https://biflex.net/exchange/sugar-btc">https://biflex.net/exchange/sugar-btc</a></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="171"><del>SUGAR-BTC: <a href="https://biflex.net/exchange/sugar-btc">https://biflex.net/exchange/sugar-btc</a> (closed)</del></li>
 							</ul>
 							<li class="has-line-data" data-line-start="171" data-line-end="171">XEQUINEX.COM
 							<ul>
