--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+		<!-- OG -->
+		<meta property="og:url" content="https://sugarchain.org" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Sugarchain" />
+		<meta property="og:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
+		<meta property="og:image" content="/og_image.jpg" />
+
 		<title>Sugarchain</title>
 		<link rel="icon" type="image/png" href="logo.png">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
